--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,41 +2,40 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body {
     background-color: #d9dcd6;
 }
 
-#top {
+.header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-#top h1 {
+.header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-#top h1 .seo {
+.header h1 .seo {
     color: #d9dcd6;
 }
 
-#top section {
+.header section {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-#top section ul {
+.header section ul {
     list-style-type: none;
 }
 
-#top section ul li {
+.header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
