--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-/*applies to whole webpage*/
+/*style applied to whole webpage*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-/*sets background for body*/
+/*background color for body*/
 body {
     background-color: #d9dcd6;
 }
@@ -20,32 +20,32 @@ body {
     display: inline-block;
     font-size: 48px;
 }
-/*sets color for h1 in header*/
+/*color for h1 in header*/
 .header h1 .seo {
     color: #d9dcd6;
 }
 /*style for section located inside header*/
-.header section {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-size: 20px;
 }
-/*style for unordered list section inside header*/
-.header section ul {
+/*style for unordered list nav section inside header*/
+.header nav ul {
     list-style-type: none;
 }
 /*style for unordered list items in header*/
-.header section ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/*style for anchor elements*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/*style for all paragraph elements*/ 
 p {
     font-size: 16px;
 }
